Added config management.

--- a/alembic.ini
+++ b/alembic.ini
@@ -58,7 +58,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://metro:Metro2024@13.233.101.243:5432/metro
+# sqlalchemy.url = postgresql+asyncpg://metro:Metro2024@13.233.101.243:5432/metro
+sqlalchemy.url = postgresql+asyncpg://%(DB_USER)s:%(DB_PASS)s@%(DB_HOST_NAME)s/%(DB_NAME)s
 
 
 [post_write_hooks]
